--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "@octokit/core": "^3.5.1",
       "@octokit/plugin-rest-endpoint-methods": "^5.5.2",
       "@netlify/functions": "^0.9.0",
-      "d3": "^7.1.1"
+      "d3": "^7.1.1",
+      "vue": "^3.2.22"
     },
     "devDependencies": {
       "@octokit/openapi-types": "^9.2.0",
