--- a/gha/package.json
+++ b/gha/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "@netlify/functions": "^0.9.0"
+    "@netlify/functions": "^0.9.0",
+    "@types/node": "^16.11.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
