--- a/gha/package.json
+++ b/gha/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "@netlify/functions": "^0.9.0",
-    "@types/node": "^16.11.7"
+    "@netlify/functions": "^0.9.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -24,6 +23,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1"
+    "eslint-plugin-vue": "^7.12.1",
+    "@types/node": "^16.11.7"
   }
 }
