--- a/gha/package.json
+++ b/gha/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "@netlify/functions": "^0.9.0"
+    "@netlify/functions": "^0.9.0",
+    "d3": "^7.1.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -24,6 +25,7 @@
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "@types/node": "^16.11.7"
+    "@types/node": "^16.11.7",
+    "@types/d3": "^7.1.0"
   }
 }
